Fixed color contrast errors in team page

--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
   max-width: 1200px;
   margin: 0px auto;
   margin-bottom: 20px;
+  padding: 15px;
 }
 
 em {
